Updated exercise for html

--- a/01-fundamentos/bloco-03-introducao-html-css/dia-1-html-css-estruturas-de-pagina/index.html
+++ b/01-fundamentos/bloco-03-introducao-html-css/dia-1-html-css-estruturas-de-pagina/index.html
@@ -8,13 +8,36 @@
     <h1>Exercícios</h1>
     <h2>Lista de amizades</h2>
     <ol>
-        <li>Lorem</li>
-        <li>Ipsum</li>
-        <li>Dolor</li>
+        <li><a href="#robson">Robson Aires</a></li>
+        <li><a href="#pedro">Pedro Costa</a></li>
+        <li><a href="#gabriel">Gabriel Proença</a></li>
+        <li><a href="#tiago">Tiago Dias</a></li>
     </ol>
     <h2>Imagem externa</h2>
     <img src="https://via.placeholder.com/400x400">
     <h2>Imagem local</h2>
     <img src="./images/gatinho.jpg" width="500">
+    <h2>Parágrafos</h2>
+    <p id="robson">ROBSON Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis aliquam maiores numquam. Praesentium enim sunt exercitationem voluptas cum nulla itaque harum, nostrum autem neque, molestias, dignissimos quidem ducimus qui nam?
+    Commodi ipsam odit, quam eum voluptates quisquam ratione modi error eligendi? Suscipit harum nihil, minus dolor consequatur corporis eaque laudantium optio dignissimos quidem, mollitia ducimus. Dignissimos cupiditate laboriosam neque magnam?
+    Quidem velit quaerat aliquid alias debitis error ipsa ullam ea facilis, dolores quia voluptas obcaecati neque soluta, perspiciatis asperiores quasi nam non! Accusamus est non minima, voluptas incidunt corrupti exercitationem?
+    Quis tenetur voluptates molestias animi repellendus nulla assumenda quisquam autem distinctio ducimus? Magni, suscipit soluta perspiciatis fugiat sequi in laudantium maiores sunt quia, similique molestias quasi, ipsa ad eligendi necessitatibus.</p>
+
+    <p id="pedro">PEDRO Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis aliquam maiores numquam. Praesentium enim sunt exercitationem voluptas cum nulla itaque harum, nostrum autem neque, molestias, dignissimos quidem ducimus qui nam?
+      Commodi ipsam odit, quam eum voluptates quisquam ratione modi error eligendi? Suscipit harum nihil, minus dolor consequatur corporis eaque laudantium optio dignissimos quidem, mollitia ducimus. Dignissimos cupiditate laboriosam neque magnam?
+      Quidem velit quaerat aliquid alias debitis error ipsa ullam ea facilis, dolores quia voluptas obcaecati neque soluta, perspiciatis asperiores quasi nam non! Accusamus est non minima, voluptas incidunt corrupti exercitationem?
+      Quis tenetur voluptates molestias animi repellendus nulla assumenda quisquam autem distinctio ducimus? Magni, suscipit soluta perspiciatis fugiat sequi in laudantium maiores sunt quia, similique molestias quasi, ipsa ad eligendi necessitatibus.</p>
+
+      <p id="gabriel">GABRIEL Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis aliquam maiores numquam. Praesentium enim sunt exercitationem voluptas cum nulla itaque harum, nostrum autem neque, molestias, dignissimos quidem ducimus qui nam?
+        Commodi ipsam odit, quam eum voluptates quisquam ratione modi error eligendi? Suscipit harum nihil, minus dolor consequatur corporis eaque laudantium optio dignissimos quidem, mollitia ducimus. Dignissimos cupiditate laboriosam neque magnam?
+        Quidem velit quaerat aliquid alias debitis error ipsa ullam ea facilis, dolores quia voluptas obcaecati neque soluta, perspiciatis asperiores quasi nam non! Accusamus est non minima, voluptas incidunt corrupti exercitationem?
+        Quis tenetur voluptates molestias animi repellendus nulla assumenda quisquam autem distinctio ducimus? Magni, suscipit soluta perspiciatis fugiat sequi in laudantium maiores sunt quia, similique molestias quasi, ipsa ad eligendi necessitatibus.</p>
+
+        <p id="tiago">TIAGO Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis aliquam maiores numquam. Praesentium enim sunt exercitationem voluptas cum nulla itaque harum, nostrum autem neque, molestias, dignissimos quidem ducimus qui nam?
+          Commodi ipsam odit, quam eum voluptates quisquam ratione modi error eligendi? Suscipit harum nihil, minus dolor consequatur corporis eaque laudantium optio dignissimos quidem, mollitia ducimus. Dignissimos cupiditate laboriosam neque magnam?
+          Quidem velit quaerat aliquid alias debitis error ipsa ullam ea facilis, dolores quia voluptas obcaecati neque soluta, perspiciatis asperiores quasi nam non! Accusamus est non minima, voluptas incidunt corrupti exercitationem?
+          Quis tenetur voluptates molestias animi repellendus nulla assumenda quisquam autem distinctio ducimus? Magni, suscipit soluta perspiciatis fugiat sequi in laudantium maiores sunt quia, similique molestias quasi, ipsa ad eligendi necessitatibus.</p>
+
+  <h2><a href="https://www.google.com">Google</a></h2>
   </body>
 </html>
